--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 26 22:52:14 EET 2015
-sdk.dir=/Developer/Android/sdk
+#Tue Oct 27 16:52:19 EET 2015
+sdk.dir=D\:\\android\\sdk
