--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 31 11:19:49 EET 2015
-sdk.dir=/Developer/Android/sdk
+#Sat Oct 31 17:00:49 EET 2015
+sdk.dir=D\:\\android\\sdk
