liste olayi tamamlandi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ikon"
         android:label="@string/app_name">
-        <activity android:name=".Bilgilendirme" android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name=".temp.Bilgilendirme" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
