intent ve bilimum diger lüzumsuz isler

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-		<activity android:name=".aktivite.Not"/>
+		<activity android:name=".aktivite.Not" android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 		<receiver android:name=".Kisisel">
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
