--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 02 00:02:27 EET 2015
-sdk.dir=/Developer/Android/sdk
+#Sun Nov 08 01:50:48 EET 2015
+sdk.dir=D\:\\android\\sdk
