--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 12 18:46:14 EET 2015
-sdk.dir=/Developer/Android/sdk
+#Sat Nov 14 14:57:01 EET 2015
+sdk.dir=D\:\\android\\sdk
