ha buda alarm manager ile bazi isleri arkaplanda yapmasini saglayan servis hizmetlerinin entegrasyonunu iceriyo belli basli broadcast receiver olaylarini okuyup ona göre hareket edecek,ileriki asama soketle entegre etmek olcak bakalim bakalim efenim..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
 				<action android:name="kisisel.action.UZAK_SAG_SECIM"/>
 				<action android:name="kisisel.action.UZAK_SOL_CERCEVE"/>
-			</intent-filter>
+                <action android:name="kisisel.action.GUNCELLE"/>
+            </intent-filter>
 			<meta-data android:name="android.appwidget.provider" android:resource="@xml/ayar"/>
 		</receiver>
         <receiver android:name=".araclar.Tasiyici"/>
+        <service android:name=".servis.guncelleme.Guncelle"/>
         <service android:name=".servis.gorunum.UzakServis" android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 </manifest>
